...
    "changeToken": "Change Token",
    "replaceActiveToken": "Replace Active Token",
    "addAnotherAccount": "Add another account",
    "removeGithubAccount": "Remove GitHub Account",
    "repositories": "Repositories",
    "noRepositories": "No repositories added yet",
    "addRepository": "Add Repository",
    "syncEngine": "Sync engine",
    "templates": "Templates",
    "templatesRepository": "Templates repository",
    "syncCustomTemplates": "Sync custom templates",
    "disconnectTemplatesRepo": "Disconnect templates repo",
    "noteRendering": "Note rendering",
...
